# cpp-sensors-project

./: CMakeLists.txt  README.md  main.cpp
src/database/: clickhouse_client.cpp  clickhouse_client.h  connection_pool.cpp  connection_pool.h
src/models/: sensor_data.cpp  sensor_data.h
src/queue/: thread_safe_queue.cpp  thread_safe_queue.h
src/server/: connection.cpp  connection.h  http_server.cpp  http_server.h
src/utils/: json_parser.cpp  json_parser.h
